tests/compile-fail/integration__integration__type_check__basic_type_checking.snap
---
source: tests/integration/type_check.rs
expression: stderr
---
error: type error
   ┌─ <input>:27:15
   │
27 │     F0 = F1 + 4;        // arg
   │          -- - ^ an integer
   │          │  │  
   │          │  same types required by this
   │          a float

error: type error
   ┌─ <input>:28:10
   │
28 │     I0 = F1 + 2.0;      // output
   │     -- - ^^^^^^^^ a float
   │     │  │  
   │     │  same types required by this
   │     an integer

error: type error
   ┌─ <input>:29:18
   │
29 │     int x = I0 + "abc"; // string
   │             -- - ^^^^^ a string
   │             │  │  
   │             │  same types required by this
   │             an integer

error: type error
   ┌─ <input>:33:10
   │
33 │     F0 = F2 ? 1.0 : 2.0;  // cond
   │          ^^ - expects an integer
   │          │   
   │          a float

error: type error
   ┌─ <input>:34:20
   │
34 │     F0 = I1 ? F1 : I0;    // cases
   │               -- - ^^ an integer
   │               │  │  
   │               │  same types required by this
   │               a float

error: type error
   ┌─ <input>:35:10
   │
35 │     I0 = I0 ? F0 : F1;    // output
   │     -- - ^^^^^^^^^^^^ a float
   │     │  │  
   │     │  same types required by this
   │     an integer

error: type error
   ┌─ <input>:39:19
   │
39 │     float f = sin(I0); // arg
   │               --- ^^ an integer
   │               │    
   │               expects a float

error: type error
   ┌─ <input>:40:13
   │
40 │     int x = sin(F0);   // output
   │     ---     ^^^^^^^ a float
   │     │        
   │     expects an integer

error: type error
   ┌─ <input>:44:14
   │
44 │     int x = -"abc";
   │             -^^^^^ a string
   │             │ 
   │             requires a numeric type

error: type error
   ┌─ <input>:45:15
   │
45 │     int z = $("abc");
   │             - ^^^^^ a string
   │             │  
   │             requires a numeric type

error: type error
   ┌─ <input>:46:16
   │
46 │     float y = ~0.4;
   │               -^^^ a float
   │               │ 
   │               expects an integer

error: type error
   ┌─ <input>:50:11
   │
50 │     F0 += I0;
   │     -- -- ^^ an integer
   │     │  │   
   │     │  same types required by this
   │     a float

error: type error
   ┌─ <input>:51:11
   │
51 │     F0 += F1 < 2.0;
   │     -- -- ^^^^^^^^ an integer
   │     │  │   
   │     │  same types required by this
   │     a float

error: type error
   ┌─ <input>:55:15
   │
55 │     int a = ++F0;
   │             --^^ a float
   │             │  
   │             expects an integer

error: type error
   ┌─ <input>:56:15
   │
56 │     float x = I0--;
   │     -----     ^^^^ an integer
   │     │          
   │     expects a float


